Fix vertical margin between tags in article page

--- a/site/themes/sogilis/assets/css/shared.css
+++ b/site/themes/sogilis/assets/css/shared.css
@@ -256,6 +256,7 @@ header ul {
   padding-left: 0.7em;
   padding-right: 0.5em;
   margin-left: 0.8em;
+  margin-bottom: 0.1rem;
   border-top-right-radius: 0.3em;
   border-bottom-right-radius: 4px;
   text-decoration: none;
