--- a/theme/styles/code.styl
+++ b/theme/styles/code.styl
@@ -20,17 +20,16 @@ $lineNumbersWrapperWidth = 3.5rem
 $codeLang = 'markup' 'css' 'clike' 'javascript' 'abap' 'actionscript' 'ada' 'apacheconf' 'apl' 'applescript' 'arduino' 'arff' 'asciidoc' 'asm6502' 'aspnet' 'autohotkey' 'autoit' 'bash' 'basic' 'batch' 'bison' 'brainfuck' 'bro' 'c' 'csharp' 'cpp' 'coffeescript' 'clojure' 'crystal' 'csp' 'css-extras' 'd' 'dart' 'diff' 'django' 'docker' 'eiffel' 'elixir' 'elm' 'erb' 'erlang' 'fsharp' 'flow' 'fortran' 'gedcom' 'gherkin' 'git' 'glsl' 'gml' 'go' 'graphql' 'groovy' 'haml' 'handlebars' 'haskell' 'haxe' 'http' 'hpkp' 'hsts' 'ichigojam' 'icon' 'inform7' 'ini' 'io' 'j' 'java' 'jolie' 'json' 'julia' 'keyman' 'kotlin' 'latex' 'less' 'liquid' 'lisp' 'livescript' 'lolcode' 'lua' 'makefile' 'markdown' 'markup-templating' 'matlab' 'mel' 'mizar' 'monkey' 'n4js' 'nasm' 'nginx' 'nim' 'nix' 'nsis' 'objectivec' 'ocaml' 'opencl' 'oz' 'parigp' 'parser' 'pascal' 'perl' 'php' 'php-extras' 'plsql' 'powershell' 'processing' 'prolog' 'properties' 'protobuf' 'pug' 'puppet' 'pure' 'python' 'q' 'qore' 'r' 'jsx' 'tsx' 'renpy' 'reason' 'rest' 'rip' 'roboconf' 'ruby' 'rust' 'sas' 'sass' 'scss' 'scala' 'scheme' 'smalltalk' 'smarty' 'sql' 'soy' 'stylus' 'swift' 'tap' 'tcl' 'textile' 'tt2' 'twig' 'typescript' 'vbnet' 'velocity' 'verilog' 'vhdl' 'vim' 'visual-basic' 'wasm' 'wiki' 'xeora' 'xojo' 'xquery' 'yaml';
 
 /**
- * Inspired from https://github.com/vuepress/vuepress-theme-blog/blob/ad2d689f0f144e208fe4e1a35448bc2fc7ae8d5a/styles/code.styl
+ * Inspired from https://github.com/vuejs/vuepress/blob/3e1f5d844b16a3f829465a35e734a5f556c3dd22/packages/%40vuepress/theme-default/styles/code.styl
  */
 
 {$contentClass}
   code
     color lighten($textColor, 20%)
-    padding 0.1rem 0.4rem
-    margin 0.1rem
-    font-size 0.85em
+    padding 0.25rem 0.4rem
+    margin 0
     background-color rgba(27,31,35,0.05)
-    border-radius 15px
+    border-radius 3px
     .token
       &.deleted
         color #EC5975
@@ -39,7 +38,7 @@ $codeLang = 'markup' 'css' 'clike' 'javascript' 'abap' 'actionscript' 'ada' 'apa
 
 {$contentClass}
   pre, pre[class*="language-"]
-    line-height 1.4
+    line-height 1.5
     padding 1.25rem 1.5rem
     margin 0.85rem 0
     background-color $codeBgColor
@@ -62,9 +61,9 @@ div[class*="language-"]
     top 0
     left 0
     width 100%
-    line-height 1.4
+    line-height 1.5
     .highlighted
-      background-color rgba(255, 255, 255, 20%)
+      background-color rgba(0, 0, 0, 66%)
   pre, pre[class*="language-"]
     background transparent
     position relative
@@ -74,7 +73,6 @@ div[class*="language-"]
     z-index 3
     top 0.8em
     right 1em
-    font-size 0.75rem
     color rgba(255, 255, 255, 0.4)
   &:not(.line-numbers-mode)
     .line-numbers-wrapper
@@ -101,15 +99,16 @@ div[class*="language-"]
       width $lineNumbersWrapperWidth
       text-align center
       color rgba(255, 255, 255, 0.3)
-      padding 1.25rem 0
-      line-height 1.4
+      // https://github.com/vuejs/vuepress/issues/1294
+      padding 1rem 0
+      line-height 1.5
       br
         user-select none
       .line-number
         position relative
         z-index 4
         user-select none
-        font-size 0.85em
+        font-size 1.12rem
     &::after
       content ''
       position absolute
@@ -121,7 +120,6 @@ div[class*="language-"]
       border-radius 6px 0 0 6px
       border-right 1px solid rgba(0, 0, 0, 66%)
       background-color $codeBgColor
-
 
 for lang in $codeLang
   div{'[class~="language-' + lang + '"]'}
