feat: import page of Post page from https://github.com/sogilis/Blog/tree/92f45f6670f98e2283771160adae23a3f330b1e0

--- a/theme/styles/shared.scss
+++ b/theme/styles/shared.scss
@@ -23,6 +23,10 @@ body {
   font-family: 'Montserrat', sans-serif;
 }
 
+img {
+  width: 100%;
+}
+
 /* Titles */
 /* Note: all titles should have a serif font */
 /* ========================================================================== */
