fix: css error for Posts

--- a/theme/styles/index.scss
+++ b/theme/styles/index.scss
@@ -2,3 +2,5 @@
 @import '../../node_modules/typeface-montserrat//index.css';
 @import '../../node_modules/typeface-eb-garamond/index.css';
 @import './shared.scss';
+@import './article.scss';
+@import './fonts.scss';
