--- a/site/themes/sogilis/assets/css/shared.css
+++ b/site/themes/sogilis/assets/css/shared.css
@@ -23,6 +23,10 @@ body {
   font-family: 'Montserrat', sans-serif;
 }
 
+a {
+  cursor: pointer;
+}
+
 /* Titles */
 /* Note: all titles should have a serif font */
 /* ========================================================================== */
