--- a/site/themes/sogilis/layouts/partials/head.html
+++ b/site/themes/sogilis/layouts/partials/head.html
@@ -64,4 +64,6 @@
   <link rel="stylesheet" href="{{ $shared.Permalink }}" type="text/css" />
 
   <link rel="icon" type="image/png" href="{{ "images/favicon.png" | relURL }}"/>
+
+  <script src="https://cdn.jsdelivr.net/npm/tarteaucitronjs/tarteaucitron.js"> </script>
 </head>
