--- a/site/themes/sogilis/layouts/partials/head.html
+++ b/site/themes/sogilis/layouts/partials/head.html
@@ -65,5 +65,5 @@
 
   <link rel="icon" type="image/png" href="{{ "images/favicon.png" | relURL }}"/>
 
-  <script src="https://cdn.jsdelivr.net/npm/tarteaucitronjs/tarteaucitron.js"> </script>
+  <script src="https://cdn.jsdelivr.net/npm/tarteaucitronjs@1.9.0/tarteaucitron.min.js"> </script>
 </head>
