fix: links to sogilis website (was migrated from sogilis.fr to sogilis.fr)

--- a/site/themes/sogilis/layouts/partials/footer.html
+++ b/site/themes/sogilis/layouts/partials/footer.html
@@ -1,7 +1,7 @@
 <footer>
   <div id="sofooter" class="maincolumn">
     <section id="footer-logo">
-      <a href="https://sogilis.fr/index.html"
+      <a href="https://sogilis.com/"
         >
         <img
           alt="Logo Sogilis"
@@ -18,7 +18,7 @@
         id="footer-subgridadress-contactus"
         class="footer-subgridadress-largescreen2ndline"
       >
-        <a class="btn-dark-grey" href="https://sogilis.fr/contact.html">
+        <a class="btn-dark-grey" href="https://sogilis.com/contact/">
           {{ i18n "contactUs" }}
           <svg
             version="1.1"
@@ -127,7 +127,7 @@
       <ul class="footer-nav">
         <li class="footer-nav-li">
           <a
-            href="https://sogilis.fr/services-applications-cloud-native.html"
+            href="https://sogilis.com/services-applications-cloud-native/"
             class="footer-nav-a"
           >
             {{i18n "cloudNativeApplications" }}
@@ -136,7 +136,7 @@
         </li>
         <li class="footer-nav-li">
           <a
-            href="https://sogilis.fr/services-embarques-et-iot.html"
+            href="https://sogilis.com/services-embarques-et-iot/"
             class="footer-nav-a"
           >
             {{ i18n "embeddedSoftwares" }}
@@ -145,7 +145,7 @@
         </li>
         <li class="footer-nav-li">
           <a
-            href="https://sogilis.fr/services-logiciels-critiques.html"
+            href="https://sogilis.com/services-logiciels-critiques/"
             class="footer-nav-a"
           >
             {{ i18n "criticalSoftwares" }}
@@ -159,7 +159,7 @@
       <ul class="footer-nav">
         <li class="footer-nav-li">
           <a
-            href="https://sogilis.fr/vision.html"
+            href="https://sogilis.com/vision/"
             class="footer-nav-a"
           >
             {{ i18n "ourVision" }}
@@ -167,7 +167,7 @@
         </li>
         <li class="footer-nav-li">
           <a
-            href="https://sogilis.fr/emplois.html"
+            href="https://sogilis.com/emplois/"
             class="footer-nav-a"
           >
             {{ i18n "jobs" }}
@@ -197,7 +197,7 @@
         </a>
       </p>
       <p>
-        <a href="https://sogilis.fr/mentions-legal.html" class="footer-nav-a">
+        <a href="https://sogilis.com/mentions-legal/" class="footer-nav-a">
           {{ i18n "LegalInfo" }}
         </a>
       </p>
