--- a/site/themes/sogilis/layouts/partials/header.html
+++ b/site/themes/sogilis/layouts/partials/header.html
@@ -31,7 +31,7 @@
               header-desktop-right-dropdown-content-link
               header-desktop-right-text
             "
-            href="https://sogilis.fr/services-applications-cloud-native.html"
+            href="https://sogilis.com/services-applications-cloud-native/"
           >
             {{ i18n "cloudNativeApplications" }}
           </a>
@@ -42,7 +42,7 @@
               header-desktop-right-dropdown-content-link
               header-desktop-right-text
             "
-            href="https://sogilis.fr/services-embarques-et-iot.html"
+            href="https://sogilis.com/services-embarques-et-iot/"
           >
             {{ i18n "embeddedSoftwares" }}
           </a>
@@ -53,7 +53,7 @@
               header-desktop-right-dropdown-content-link
               header-desktop-right-text
             "
-            href="https://sogilis.fr/services-logiciels-critiques.html"
+            href="https://sogilis.com/services-logiciels-critiques/"
           >
             {{ i18n "criticalSoftwares" }}
           </a>
@@ -79,7 +79,7 @@
               header-desktop-right-dropdown-content-link
               header-desktop-right-text
             "
-            href="https://sogilis.fr/vision.html"
+            href="https://sogilis.com/vision/"
           >
             {{ i18n "ourVision" }}
           </a>
@@ -90,7 +90,7 @@
               header-desktop-right-dropdown-content-link
               header-desktop-right-text
             "
-            href="https://sogilis.fr/approche.html"
+            href="https://sogilis.com/approche/"
           >
             {{ i18n "ourApproach" }}
           </a>
@@ -101,7 +101,7 @@
               header-desktop-right-dropdown-content-link
               header-desktop-right-text
             "
-            href="https://sogilis.fr/emplois.html"
+            href="https://sogilis.com/emplois/"
           >
             {{ i18n "joinUs" }}
           </a>
@@ -125,7 +125,7 @@
           header-desktop-right-category
           header-desktop-right-text
         "
-        href="https://sogilis.fr/contact.html"
+        href="https://sogilis.com/contact/"
       >
         {{ i18n "contact" }}
       </a>
@@ -187,7 +187,7 @@
         <li class="header-mobile-navmenu-li">
           <a
             class="header-mobile-navmenu-link"
-            href="https://sogilis.fr/services-applications-cloud-native.html"
+            href="https://sogilis.com/services-applications-cloud-native/"
           >
             {{i18n "cloudNativeApplications" }}
           </a>
@@ -195,7 +195,7 @@
         <li class="header-mobile-navmenu-li">
           <a
             class="header-mobile-navmenu-link"
-            href="https://sogilis.fr/services-embarques-et-iot.html"
+            href="https://sogilis.com/services-embarques-et-iot/"
           >
             {{ i18n "embeddedSoftwares" }}
           </a>
@@ -203,7 +203,7 @@
         <li class="header-mobile-navmenu-li">
           <a
             class="header-mobile-navmenu-link"
-            href="https://sogilis.fr/services-logiciels-critiques.html"
+            href="https://sogilis.com/services-logiciels-critiques/"
           >
             {{ i18n "criticalSoftwares" }}
           </a>
@@ -211,7 +211,7 @@
         <li class="header-mobile-navmenu-li">
           <a
             class="header-mobile-navmenu-link"
-            href="https://sogilis.fr/vision.html"
+            href="https://sogilis.com/vision/"
           >
             {{ i18n "ourVision" }}
           </a>
@@ -219,7 +219,7 @@
         <li class="header-mobile-navmenu-li">
           <a
             class="header-mobile-navmenu-link"
-            href="https://sogilis.fr/approche.html"
+            href="https://sogilis.com/approche/"
           >
             {{ i18n "ourApproach" }}
           </a>
@@ -227,7 +227,7 @@
         <li class="header-mobile-navmenu-li">
           <a
             class="header-mobile-navmenu-link"
-            href="https://sogilis.fr/emplois.html"
+            href="https://sogilis.com/emplois/"
           >
             {{ i18n "joinUs" }}
           </a>
@@ -243,7 +243,7 @@
         <li>
           <a
             class="header-mobile-navmenu-link"
-            href="https://sogilis.fr/contact.html"
+            href="https://sogilis.com/contact/"
           >
             {{ i18n "contact" }}
           </a>
