fix: all right reserved with correct date

--- a/site/themes/sogilis/layouts/partials/footer.html
+++ b/site/themes/sogilis/layouts/partials/footer.html
@@ -125,7 +125,7 @@
     <hr id="footer-hr" />
 
     <section id="footer-subfooter">
-      <p>{{ i18n "allRightsReserved" }}</p>
+      <p>{{ i18n "allRightsReserved" }} {{ time.Now.Year }}</p>
       <p>
         <a
           onclick='tarteaucitron.userInterface.openPanel();'
